--- a/GlucoMan.Maui/FoodsPage.xaml
+++ b/GlucoMan.Maui/FoodsPage.xaml
@@ -5,7 +5,7 @@
              Title="Foods" Loaded="PageLoad">
     <ContentPage.Content>
         <!--Grid.RowDefinitions="20,20,50,20,50,20,50,50,*"-->
-        <Grid Grid.RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,*"
+        <Grid Grid.RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,55,55,*"
             Grid.ColumnDefinitions="*, *, *, *">
             <Label Grid.Row="0" Grid.Column="0" TextColor="Black" 
                 Grid.ColumnSpan="4" Text="Food's information" 
@@ -17,7 +17,8 @@
 
             <Entry Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
                     HorizontalOptions="Fill" VerticalOptions="Fill" 
-                    x:Name="txtName" BackgroundColor="LightGreen"
+                    x:Name="txtName" 
+                   BackgroundColor="LightGreen" TextColor="Black"
                     ToolTipProperties.Text="Name of this food"
                     Keyboard="Text" TextChanged="txtName_TextChanged"
                     HorizontalTextAlignment="Start" VerticalTextAlignment="Center"
@@ -43,43 +44,59 @@
                 Text="Description of food" HorizontalTextAlignment="Start" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" 
-                x:Name="txtDescription" BackgroundColor="LightGreen"
+                x:Name="txtDescription" 
+                   BackgroundColor="LightGreen" TextColor="Black"
                 ToolTipProperties.Text="Description of this food" Margin="0"
                 Keyboard="Text" TextChanged="txtDescription_TextChanged"
                 HorizontalTextAlignment="Start" FontSize="Micro"
                 Text="{Binding Description}"/>
 
-            <Label Grid.Row="5" Grid.Column="0" Text="CHO [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="5" Grid.Column="0" Text="CHO %" 
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
-            <Entry Grid.Row="6" Grid.Column="0" x:Name="txtFoodCarbohydrates" BackgroundColor="GreenYellow"
-                Keyboard="Numeric" HorizontalTextAlignment="End" Margin="1"
-                ToolTipProperties.Text="Percent Carbohydrates of this food [%]"
-                Text = "{Binding CarbohydratesPercent.Text}"/>
-            <Button Grid.Row="6" Grid.Column="1" x:Name="btnChoose" Text="Choose" Margin="1"
-                ToolTipProperties.Text="Chooses this food to be used by the calling page"
+            <Entry Grid.Row="6" Grid.Column="0" x:Name="txtFoodCarbohydrates" 
+                   BackgroundColor="GreenYellow" TextColor="Black"
+                   Keyboard="Numeric" HorizontalTextAlignment="End" Margin="1"
+                   ToolTipProperties.Text="Percent Carbohydrates of this food [%]"
+                   Text = "{Binding CarbohydratesPercent.Text}"/>
+            <Button Grid.Row="6" Grid.Column="1" x:Name="btnChoose" Margin="1"
+                    ImageSource="choose.png"
+                ToolTipProperties.Text="Choose: chooses this food to be used by the calling page"
                 Clicked="btnChoose_Click"/>
-            <Button Grid.Row="6" Grid.Column="2" Text="+" x:Name="btnAddFood" Margin="1"
-                ToolTipProperties.Text="Adds a new food with data from UI"
+            <!--Text="Choose"-->
+            <Button Grid.Row="6" Grid.Column="2" x:Name="btnAddFood" Margin="1"
+                    ImageSource="plus.png"
+                ToolTipProperties.Text="Plus: adds a new food with data from UI"
                 Clicked="btnAddFood_Click"/>
-            <Button Grid.Row="6" Grid.Column="3" Text="-" x:Name="btnRemoveFood" Margin="1"
-                ToolTipProperties.Text="Deletes the selected food"
+            <!--Text="+"-->
+            <Button Grid.Row="6" Grid.Column="3" x:Name="btnRemoveFood" Margin="1"
+                    ImageSource="minus.png"
+                ToolTipProperties.Text="Minus: deletes the selected food"
                 Clicked="btnRemoveFood_Click"/>
+            <!--Text="-"-->
 
-            <Button Grid.Row="7" Grid.Column="0" Text="Save" x:Name="btnSaveFood" Margin="1"
-                ToolTipProperties.Text="Saves the food with the current data of the UI"
+            <Button Grid.Row="7" Grid.Column="0" x:Name="btnSaveFood" Margin="1"
+                    ImageSource="floppy_disc.png"
+                ToolTipProperties.Text="Save: saves the food with the current data of the UI"
                 Clicked="btnSaveFood_Click"/>
-            <Button Grid.Row="7" Grid.Column="1" Text="Details" x:Name="btnFoodDetails" Margin="1"
-                ToolTipProperties.Text="Opens the page with additional data about the food"
+            <!--Text="Save"-->
+            <Button Grid.Row="7" Grid.Column="1" x:Name="btnFoodDetails" Margin="1"
+                    ImageSource="details.png"
+                ToolTipProperties.Text="Details: opens the page with additional data about the food"
                 Clicked="btnFoodDetails_Click"/>
-            <Button Grid.Row="7" Grid.Column="2" Text="Clean&#10;Fields"
-                    x:Name="btnCleanFields" Margin="1"
-                ToolTipProperties.Text="Cleans all data in the UI"
-                Clicked="btnCleanFields_Click" LineBreakMode="WordWrap"
+            <Button Grid.Row="7" Grid.Column="2"
+                    ImageSource="clear_fields.png"
+                    x:Name="btnClearFields" Margin="1"
+                ToolTipProperties.Text="Clear Fields: clears all data in the UI"
+                Clicked="btnClearFields_Click" LineBreakMode="WordWrap"
                 FontSize="Micro"/>
-            <Button Grid.Row="7" Grid.Column="3" Text="Search" x:Name="btnSearchFood" Margin="1"
-                ToolTipProperties.Text="Searchs the foods matching the filter in the UI"
+            <!--Text="Clear&#10;Fields"-->
+            <Button Grid.Row="7" Grid.Column="3" 
+                    ImageSource="magnifier.png"
+                    x:Name="btnSearchFood" Margin="1"
+                ToolTipProperties.Text="Search: searchs the foods matching the filter that is in the UI"
                 Clicked="btnSearchFood_Click"/>
-
+            <!--Text="Search"-->
             <ListView Grid.Row="8" Grid.ColumnSpan="4" x:Name="gridFoods" 
                       ItemsSource="{Binding}" 
                       ItemSelected="OnGridSelectionAsync">
@@ -90,8 +107,10 @@
                             <ViewCell.View>
                                 <Grid RowDefinitions="19" ColumnDefinitions="*,36"
                                       Margin="2" VerticalOptions="Center">
-                                    <Label HorizontalTextAlignment="Start" Grid.Column="0" Text="{Binding Name}" Margin="5,0" />
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding Carbohydrates.Text}"/>
+                                    <Label HorizontalTextAlignment="Start" Grid.Column="0" 
+                                           Text="{Binding Name}" Margin="5,0" />
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" 
+                                           Text="{Binding CarbohydratesPercent.Text}"/>
                                 </Grid>
                             </ViewCell.View>
                         </ViewCell>
