--- a/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
+++ b/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
@@ -5,7 +5,7 @@
              Title="Glucose Measurements">
     <ContentPage.Content>
         <!--RowDefinitions="40,50,50,50,30,30,*"-->
-        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,*"
+        <Grid RowDefinitions="Auto,Auto,Auto,65,Auto,Auto,*"
               ColumnDefinitions="*,*,*,*">
             <Label Grid.Row="0" Grid.Column="0" Text="Glucose&#10;[mg/dL]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"
                    ToolTipProperties.Text="Glucose measurement taken from the instrument" LineBreakMode="WordWrap"/>
@@ -15,13 +15,15 @@
             <Label Grid.Row="0" Grid.Column="3" Text="Id" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="1" Grid.Column="0" x:Name="txtGlucose" Text="" FontSize="Medium"
-                   Keyboard="Numeric" HorizontalTextAlignment="End" BackgroundColor="Lime" 
+                   Keyboard="Numeric" HorizontalTextAlignment="End" 
+                   BackgroundColor="Lime" TextColor="Black"
                    ToolTipProperties.Text="Glucose measurement taken from the instrument" IsEnabled="true"/>
             <DatePicker Grid.Row="1" Grid.Column="1" x:Name="dtpEventDate" Margin="1"
-                        BackgroundColor="PaleGreen" 
+                        BackgroundColor="PaleGreen" TextColor="Black"
                         HorizontalOptions="Center" VerticalOptions="Center"
                         ToolTipProperties.Text="Date of measurement of glucose"/>
-            <TimePicker Grid.Row="1" Grid.Column="2" x:Name="dtpEventTime" BackgroundColor="PaleGreen" 
+            <TimePicker Grid.Row="1" Grid.Column="2" x:Name="dtpEventTime" 
+                        BackgroundColor="PaleGreen" TextColor="Black"
                         HorizontalOptions="Center" VerticalOptions="Center" Margin="1"
                         ToolTipProperties.Text="Time of measurement of glucose"/>
             <Label Grid.Row="1" Grid.Column="3" x:Name="txtIdGlucoseRecord" Text=""
@@ -29,27 +31,38 @@
 
             <!-- check box with associated label into a StackLayout -->
             <Entry Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4"
-                   x:Name="txtNotes" BackgroundColor="LightGreen"
+                   x:Name="txtNotes" BackgroundColor="LightGreen" TextColor="Black"
                    HorizontalTextAlignment="Start" IsReadOnly="false"
                    ToolTipProperties.Text="Note about the measurement" />
 
-            <Button Grid.Row="3" Grid.Column="0" Text="Now" x:Name="btnNow" Margin="1"
-                    ToolTipProperties.Text="Sets the date and time at the current instant" 
+            <Button Grid.Row="3" Grid.Column="0" x:Name="btnNow" Margin="1"
+                    ImageSource="clock.png"
+                    ToolTipProperties.Text="Now: sets the date and time at the current instant" 
                     Clicked="btnNow_Click"/>
+            <!--Text="Now"-->
             <Grid Grid.Row="3" Grid.Column="1" ColumnDefinitions="*,*">
-                <Button Grid.Row="0" Grid.Column="0" Text="+" x:Name="btnAddMeasurement" Margin="1"
-                        ToolTipProperties.Text="Adds a new measurement with the data taken from UI" 
+                <Button Grid.Row="0" Grid.Column="0" x:Name="btnAddMeasurement" Margin="1"
+                        ImageSource="plus.png"
+                        ToolTipProperties.Text="Plus: adds a new measurement with the data taken from UI" 
                         Clicked="btnAddMeasurement_Click"/>
+                <!--Text="+"-->
                 <Button Grid.Row="0" Grid.Column="1"
-                        Text="-" x:Name="btnRemoveMeasurement" Margin="1"
-                    ToolTipProperties.Text="Deletes the selected measurement" 
+                        ImageSource="minus.png"
+                        x:Name="btnRemoveMeasurement" Margin="1"
+                    ToolTipProperties.Text="Minus: deletes the selected measurement" 
                     Clicked="btnRemoveMeasurement_Click"/>
+                <!--Text="-"-->
             </Grid>
-            <Button Grid.Row="3" Grid.Column="2" Text="Clear Data" Margin="1"
-                    ToolTipProperties.Text="Deletes the selected measurement" 
+            <Button Grid.Row="3" Grid.Column="2" Margin="1"
+                    ImageSource="clear_fields.png"
+                    ToolTipProperties.Text="Clear Data: deletes the fields in the UI" 
                     Clicked="btnClearData_Click"/>
-            <Button Grid.Row="3" Grid.Column="3" Text="Save" x:Name="btnSave" Margin="1"
-                    ToolTipProperties.Text="Saves the modifications made on current measurement" Clicked="btnSave_ClickAsync"/>
+            <!--Text="Clear Data"-->
+            <Button Grid.Row="3" Grid.Column="3" x:Name="btnSave" Margin="1"
+                    ImageSource="floppy_disc.png"
+                    ToolTipProperties.Text="Save: saves the modifications made on current measurement" 
+                    Clicked="btnSave_ClickAsync"/>
+            <!--Text="Save"-->
             <HorizontalStackLayout Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
                 <CheckBox VerticalOptions="Center" x:Name="chkNowInAdd" IsChecked="True">
                     <CheckBox.Margin>
