--- a/GlucoMan.Maui/WeighFoodPage.xaml
+++ b/GlucoMan.Maui/WeighFoodPage.xaml
@@ -26,7 +26,7 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Label Grid.Row="0" Grid.ColumnSpan="5" Text="Weigh food to calculate CHO. Returns cooked food's weight to raw" VerticalOptions="Center" HorizontalOptions="Start" />
+            <Label Grid.Row="0" Grid.ColumnSpan="5" Text="Weigh food to calculate CHO.&#10; Returns cooked food's weight to raw ratio" VerticalOptions="Center" HorizontalOptions="Start" />
 
             <Button Grid.Row="1" Grid.Column="3" Text="Calc"
                     Clicked="btnCalc_Click"></Button>
